웹 이미지 안나오는 오류 해결

--- a/templates/main.html
+++ b/templates/main.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html
   <head>
-    <link rel="stylesheet" href="main.css">
-    <link rel="stylesheet" href="common.css">
+    <link rel="stylesheet" href="/static/main.css">
+    <link rel="stylesheet" href="/static/common.css">
     <title>RIW</title>
   </head
 
@@ -24,11 +24,11 @@
           </p>
           <div class="photo-container">
             <div class="photo">
-              <img src="images/best_photo1.png" style="height:150px;">
+              <img src="/static/images/best_photo1.png" style="height:150px;">
               <div class="photo-explanation">Before</div>
             </div>
             <div class="photo">
-              <img src="images/best_photo1.png" style="height:150px;">
+              <img src="/static/images/best_photo1.png" style="height:150px;">
               <div class="photo-explanation">After</div>
             </div>
           </div>
@@ -40,11 +40,11 @@
         <h2>Please select the type of files you want to process</h2>
         <div class="processing-container">
           <div class="photo">
-            <img src="images/image.png" style="height:200px;">
+            <img src="/static/images/image.png" style="height:200px;">
             <div class="photo-explanation">Image</div>
           </div>
           <div class="photo">
-            <img src="images/video.png" style="height:200px;">
+            <img src="/static/images/video.png" style="height:200px;">
             <div class="photo-explanation">Video</div>
           </div>
         </div>
