자바스크립트에서 파이썬 서버로 파일 보내기

--- a/templates/main.html
+++ b/templates/main.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" href="/static/main.css">
     <link rel="stylesheet" href="/static/common.css">
     <script src="/static/fileprocess.js"></script>
+    <script src="http://code.jquery.com/jquery-latest.js"></script>
     <title>RIW</title>
   </head
 
