--- a/templates/main.html
+++ b/templates/main.html
@@ -3,9 +3,8 @@
   <head>
     <link rel="stylesheet" href="/static/main.css">
     <link rel="stylesheet" href="/static/common.css">
-    <link rel="stylesheet" href="/static/loader.css">
     <script src="http://code.jquery.com/jquery-latest.js"></script>
-    <script src="/static/filesend.js"></script>
+    <script src="/static/main.js"></script>
     <title>RIW</title>
   </head
 
@@ -38,27 +37,24 @@
         </div>
       </div>
 
-      <div class="processing">
-        <h1 class="title">Processing</h1>
+      <div class="uploading">
+        <h1 class="title">Upload</h1>
         <h2>Please upload the files you want to process</h2>
 
         <!-- 로딩 화면 -->
         <div class="loader" style="display:none;"> </div>
-        <div class="container" style="display:none;">
-          <h1>로딩 후 화면</h1>
-        </div>
 
         <!-- 기존 화면 -->
         <section id="sec">
           <div class="upload-box">
             Drag the files
           </div>
-          <input multiple="multiple" class="input-btn" type="file" accept="video/*, image/*"><br>
+          <input class="input-btn" multiple="multiple" class="input-btn" type="file" accept="video/*, image/*"><br>
           <div class="selected">
             Selected Files
             <div class="selected-zone"></div>
           </div>
-          <button type="button" class="process-btn">Process</button>
+          <button type="button" class="upload-btn">Upload</button>
       </section>
     </div>
 
