--- a/static/main.css
+++ b/static/main.css
@@ -11,13 +11,6 @@
   margin-right: 20px;
 }
 
-.title{
-  background-color: rgb(255, 238, 218);
-  padding: 5px 0px 5px 20px;
-  font-family: 'Oswald';
-  border-bottom: solid 4px black;
-}
-
 .photo-explanation{
   text-align: center;
 }
@@ -32,23 +25,9 @@
   padding-right: 10px;
 }
 
-.processing h2{
+.uploading h2{
   text-align: center;
   margin: 80px 0px 0px 0px;
-}
-
-.processing-container{
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-around;
-  margin-bottom: 15px;
-  height: 350px;
-}
-
-.processing-container .photo .photo-explanation{
-  font-size: 30px;
-  font-weight: bold;
 }
 
 .upload-box{
@@ -87,8 +66,28 @@
   background-color: rgba(221, 196, 255, 0.45)
 }
 
-.process-btn{
+.upload-btn{
   display: none;
   font-size: 40px;
   margin: auto;
+}
+
+.loader {
+  z-index: 1;;
+  margin: 300px auto;
+  border: 16px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 16px solid #3498db;
+  width: 120px;
+  height: 120px;
+  -webkit-animation: spin 2s linear infinite;
+  animation: spin 2s linear infinite;
+}
+@-webkit-keyframes spin {
+  0% { -webkit-transform: rotate(0deg); }
+  100% { -webkit-transform: rotate(360deg); }
+}
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
 }
