--- a/static/process.css
+++ b/static/process.css
@@ -13,14 +13,23 @@
   font-weight: 500;
 }
 
-#progressBar{
+.progressBar{
   margin: auto 0px;
   height: 50px;
   width: 800px;
 }
 
-#download-btn{
+.download-btn{
   margin: auto 0px;
   height: 50px;
   font-size:25px;
+  visibility: hidden;
+}
+
+.download-all{
+  margin: auto;
+  margin-bottom: 20px;
+  height: 75px;
+  font-size:50px;
+  display: none;
 }
