--- a/templates/process.html
+++ b/templates/process.html
@@ -26,8 +26,12 @@
             </video><br>
             {{f}}
           </div>
-          <progress class="progressBar" value="0" max="100"></progress>
-          <button class="download-btn" type="button" name="button">download</button>
+          <div class="btn-container">
+            <div class="loader"> </div>
+            <a class="download-path" href="{{ url_for('static', filename='./processed_files/'+f) }}" download={{f}}>
+              <button class="download-btn" type="button" name="button">Download</button>
+            </a>
+          </div>
         </div>
       {% else %}
         <div class="process-container">
@@ -35,13 +39,17 @@
             <img src="{{ url_for('static', filename='./uploaded_files/'+f) }}" style="width:200px;"><br>
             {{f}}
           </div>
-          <progress class="progressBar" value="0" max="100"></progress>
-          <button class="download-btn" type="button" name="button">download</button>
+          <div class="btn-container">
+            <div class="loader"> </div>
+            <a class="download-path" href="{{ url_for('static', filename='./processed_files/'+f) }}" download={{f}}>
+              <button class="download-btn" type="button" name="button">Download</button>
+            </a>
+          </div>
         </div>
       {% endif %}
     {% endfor %}
 
-    <button class="download-all-btn" type="button" name="button">download all</button>
+    <button class="download-all-btn" type="button" name="button">Download All</button>
 
     <div class="footer">
       <div class="contact-info">
