video 관련은 제외

--- a/templates/main.html
+++ b/templates/main.html
@@ -19,10 +19,10 @@
         <h1 class="title">About this WebSite</h1>
         <div class="introduction-container">
           <p>
-            Improve the resolution of your image or video for free!<br>
+            Improve the resolution of your images for free!<br>
             Our website uses deep-learning to create enhanced files.<br>
-            But you don't need to know about it in detail.<br>
-            Just follow the instructions on the website and you will be fine.
+            But you don't need to know about the technology in detail.<br>
+            Just upload and download imporved images.
           </p>
           <div class="photo-container">
             <div class="photo">
@@ -49,7 +49,7 @@
           <div class="upload-box">
             Drag the files
           </div>
-          <input class="input-btn" multiple="multiple" class="input-btn" type="file" accept="video/*, image/*"><br>
+          <input class="input-btn" multiple="multiple" class="input-btn" type="file" accept="image/*"><br>
           <div class="selected">
             Selected Files
             <div class="selected-zone"></div>
@@ -59,11 +59,6 @@
     </div>
 
     </div>
-    <div class="footer">
-      <div class="contact-info">
-        <p>Email: abcde@gmail.com</p>
-        <p>Phone number: 010-0000-0000</p>
-      </div>
-    </div>
+
   </body>
 </html>
