--- a/templates/main.html
+++ b/templates/main.html
@@ -10,7 +10,9 @@
 
   <body>
     <div class="header">
-      <h1><a href="main.html">Resolution Improvement Website</a></h1>
+      <a href="/"><img src="../static/images/home_icon.png"></a>
+      <h1>Resolution Improvement Website</h1>
+      <div class="empty"></div>
     </div>
 
     <div class="row">
@@ -22,18 +24,8 @@
             Improve the resolution of your images for free!<br>
             Our website uses deep-learning to create enhanced files.<br>
             But you don't need to know about the technology in detail.<br>
-            Just upload and download imporved images.
+            Just upload and download processed images.
           </p>
-          <div class="photo-container">
-            <div class="photo">
-              <img src="/static/images/best_photo1.png" style="height:150px;">
-              <div class="photo-explanation">Before</div>
-            </div>
-            <div class="photo">
-              <img src="/static/images/best_photo1.png" style="height:150px;">
-              <div class="photo-explanation">After</div>
-            </div>
-          </div>
         </div>
       </div>
 
