--- a/static/process.css
+++ b/static/process.css
@@ -7,10 +7,10 @@
 }
 
 .file-container{
-  width: 500px;
+  word-wrap: break-word;
+  width: 300px;
   text-align: center;
-  font-size:20px;
-  font-weight: 500;
+  font-size:22px;
 }
 
 .download-btn{
